# libjobs

./: .gitignore  CMakeLists.Common.txt  CMakeLists.TargetCommon.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  notes.txt
cmake/: Common.cmake  CommonExecutable.cmake  CommonLibrary.cmake  Toolchain_PS4.cmake  Toolchain_Switch.cmake  Toolchain_XboxOne.cmake
cmake/Platform/: PS4.cmake  Switch.cmake  XboxOne.cmake
cmake/Toolchain/: PS4.cmake  Switch.cmake  XboxOne.cmake
cmake/Toolchain/Platform/: PS4.cmake  Switch.cmake  XboxOne.cmake
docs/examples/1_simple/: CMakeLists.txt  main.cpp
docs/examples/2_debug_output/: CMakeLists.txt  main.cpp
docs/examples/3_dependencies/: CMakeLists.txt  main.cpp
docs/examples/4_latent_actions/: CMakeLists.txt  main.cpp
docs/examples/5_profile_events/: CMakeLists.txt  main.cpp
docs/examples/6_user_allocation/: CMakeLists.txt  main.cpp
docs/examples/7_game_loop/: CMakeLists.txt  main.cpp
docs/examples/common/: example_framework.cpp
docs/examples/common/switch/: Application.aarch64.lp64.nmeta
docs/examples/common/xboxone/: Package.appxmanifest
docs/examples/projects/ps4/: examples.sln
docs/examples/projects/ps4/1_simple/: 1_simple.vcxproj  1_simple.vcxproj.filters  Application.aarch64.lp64.nmeta
docs/examples/projects/ps4/2_debug_output/: 2_debug_output.vcxproj  2_debug_output.vcxproj.filters
docs/examples/projects/ps4/3_dependencies/: 3_dependencies.vcxproj  3_dependencies.vcxproj.filters
docs/examples/projects/ps4/4_latent_actions/: 4_latent_actions.vcxproj  4_latent_actions.vcxproj.filters
docs/examples/projects/ps4/5_profile_events/: 5_profile_events.vcxproj  5_profile_events.vcxproj.filters
docs/examples/projects/ps4/6_user_allocation/: 6_user_allocation.vcxproj  6_user_allocation.vcxproj.filters
docs/examples/projects/ps4/7_game_loop/: 7_game_loop.vcxproj  7_game_loop.vcxproj.filters
docs/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  classes.html  classjobs_1_1counter__handle.html  classjobs_1_1event__definition.html  classjobs_1_1event__handle.html  classjobs_1_1fiber.html  classjobs_1_1internal_1_1callback__scheduler.html  classjobs_1_1internal_1_1counter__definition.html  classjobs_1_1internal_1_1event__definition.html  classjobs_1_1internal_1_1fiber.html  classjobs_1_1internal_1_1job__context.html  classjobs_1_1internal_1_1job__definition.html  classjobs_1_1internal_1_1job__dependency.html  classjobs_1_1internal_1_1profile__scope__definition.html  classjobs_1_1internal_1_1profile__scope__internal.html  classjobs_1_1internal_1_1thread.html  classjobs_1_1job__context.html  classjobs_1_1job__definition.html  classjobs_1_1job__dependency.html  classjobs_1_1job__handle.html  classjobs_1_1profile__scope.html  classjobs_1_1profile__scope__definition.html  classjobs_1_1profile__scope__internal.html  classjobs_1_1scheduler.html  classjobs_1_1scheduler_1_1worker__thread__state.html  classjobs_1_1thread.html  dir_7a6499598ddcfcabe96e224cb4a6d834.html  dir_9df2fdc4710aaf8e3f420b5555772b26.html  dir_9f910540a5eb0945105440845bdbe6f3.html  dir_e07938c6c9b41a3edfb4bb4e105aced2.html  files.html  functions.html  functions_0x7e.html  functions_a.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  (+106 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+76 more)
enc_temp_folder/6a26e397d762701c22bdbbecee79c5c3/: main.cpp
inc/: jobs.h  jobs_callback_scheduler.h  jobs_counter.h  jobs_defines.h  jobs_enums.h  jobs_event.h  jobs_fiber.h  jobs_job.h  jobs_memory.h  jobs_platform.h  jobs_scheduler.h  jobs_thread.h  jobs_utils.h
src/: jobs.cpp  jobs_callback_scheduler.cpp  jobs_counter.cpp  jobs_enums.cpp  jobs_event.cpp  jobs_fiber.cpp  jobs_job.cpp  jobs_scheduler.cpp  jobs_thread.cpp  jobs_utils.cpp
